# bday-monke

./: CMakeLists.txt  bare.html  compile_commands.json
.github/workflows/: web-build.yml
src/: main.c  monke_obj.h
